--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "surfing-it-backend",
+  "name": "akaw-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "NODE_ENV='dev' nodemon server.js",
-    "production": "NODE_ENV='production' nodemon server.js"
+    "production": "NODE_ENV='production' nodemon server.js",
+    "start": "NODE_ENV='production' node app.js"
   },
   "author": "",
   "license": "ISC",
