--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "NODE_ENV='dev' nodemon server.js",
     "production": "NODE_ENV='production' nodemon server.js",
-    "start": "NODE_ENV='production' node app.js"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
